# llm_vectorstorarge_chatbot

./: .gitignore  README.md  docker-compose.yaml  environment.yml  pyproject.toml
backend/: Dockerfile  main.py  setup_model.py  setup_vector_storage.py
backend/text_data/: gratuity.txt
frontend/: Dockerfile  package-lock.json
frontend/min-example/: README.md  index.html  package-lock.json  package.json
frontend/min-example/src/: App.vue  main.js
frontend/min-example/src/components/: Greetings.vue  PromptChat.vue
frontend/min-example/src/router/: index.js
frontend/min-example/src/views/: AboutView.vue  LLMView.vue  QueryView.vue  VectorDbView.vue
