[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bussler <maarten.bussler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.272"
chromadb = "^0.4.7"
sentence-transformers = "^2.2.2"
torch = "^2.0.0"
unstructured = "^0.10.5" 
accelerate = "^0.22.0"
python-multipart = "^0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
